[gd_scene load_steps=5 format=3 uid="uid://dn5h4d2gnwgce"]

[ext_resource type="Script" path="res://scenes/run/run.gd" id="1_al7my"]
[ext_resource type="PackedScene" uid="uid://fxp4dtqfu4ww" path="res://scenes/ui/score.tscn" id="2_8lead"]
[ext_resource type="PackedScene" uid="uid://myo61y4t83tx" path="res://scenes/ui/notifier.tscn" id="3_7i2j6"]
[ext_resource type="PackedScene" uid="uid://vgk2jhj7owf5" path="res://scenes/ui/game_over_panel.tscn" id="4_sbutp"]

[node name="ExtremePinball" type="Node"]
script = ExtResource("1_al7my")

[node name="CurrentView" type="Node" parent="."]

[node name="BaseUI" type="CanvasLayer" parent="."]

[node name="Score" parent="BaseUI" instance=ExtResource("2_8lead")]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 509.0
offset_top = -65.5
offset_right = 648.0
offset_bottom = 65.5
grow_vertical = 2

[node name="Notifier" parent="BaseUI" instance=ExtResource("3_7i2j6")]

[node name="GameOverPanel" parent="BaseUI" instance=ExtResource("4_sbutp")]
visible = false

[node name="Tables" type="VBoxContainer" parent="BaseUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -607.0
offset_top = -78.0
offset_right = -353.0
offset_bottom = 78.0
grow_horizontal = 0
grow_vertical = 2

[node name="ProfessorTable" type="Button" parent="BaseUI/Tables"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
focus_mode = 0
text = "Professor Table"

[node name="AnotherTable" type="Button" parent="BaseUI/Tables"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
focus_mode = 0
text = "Another Table"

[connection signal="pressed" from="BaseUI/Tables/ProfessorTable" to="." method="_on_professor_table_pressed"]
[connection signal="pressed" from="BaseUI/Tables/AnotherTable" to="." method="_on_another_table_pressed"]
